--- a/css/style.css
+++ b/css/style.css
@@ -1562,6 +1562,8 @@ a {
 
 
 
+
+
 /* ==================== STYLE ADMIN PERFIL ==================== */
 .admin-perfil-body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -2682,7 +2684,7 @@ footer {
     background-color: white;
     padding: 15px 20px;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     margin-bottom: 20px;
 }
 
@@ -2698,18 +2700,21 @@ footer {
     width: 250px;
     background-color: #2c3e50;
     color: white;
-    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
 }
 
 .carteira-sidebar-header {
     padding: 20px;
     text-align: center;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .carteira-sidebar-header h3 {
     margin: 0;
-    color: #27ae60;
+    font-size: 20px;
+    color: #2ecc71;
 }
 
 .carteira-sidebar-nav a {
@@ -2728,6 +2733,7 @@ footer {
     flex: 1;
     padding: 20px;
 }
+
 
 .carteira-header {
     display: flex;
@@ -2792,7 +2798,7 @@ footer {
 }
 
 .carteira-form button:hover {
-    background-color: #219653;
+    background-color: #08381d;
 }
 
 .carteira-metodo-item {
@@ -2814,7 +2820,7 @@ footer {
 }
 
 .carteira-btn-remover:hover {
-    background-color: #c0392b;
+    background-color: #631d15;
 }
 
 .carteira-card table {
@@ -2875,7 +2881,7 @@ footer {
 }
 
 .form-adicionar-saldo button:hover {
-    background-color: #219653;
+    background-color: #0d361f;
 }
 
 
@@ -3825,6 +3831,27 @@ footer {
     color: #0056b3;
 }
 
+.btn-finalizarCompra {
+    background-color: #4ab15b;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.btn-finalizarCompra:hover {
+    background-color: #1c5025;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -4074,6 +4101,12 @@ footer {
     font-size: 0.9rem;
 }
 
+.logo-header-img {
+    height: 200px;
+    width: auto;
+    object-fit: contain;
+}
+
 
 
 /* PARA O MENU DO INDEX */
@@ -4182,6 +4215,18 @@ footer {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 /* ==================== STYLE LOGIN ==================== */
 .box-login {
     background-color: rgba(0, 0, 0, 0.8);
@@ -4242,9 +4287,6 @@ body.login {
     text-decoration: none;
     font-size: 16px;
 }
-
-
-
 
 
 
